proyecto_compiladores2/Parser (1)/Parser/src/main/java/org/example/Gramatica.java
/* Gramatica.java */
/* Generated By:JavaCC: Do not edit this line. Gramatica.java */
package org.example;
public class Gramatica implements GramaticaConstants {
    public static void main(String[] args) throws ParseException {
        Gramatica parser = new Gramatica(System.in);
        parser.Inicio();  // Llamada al método 'inicio()' generado

        TokenAsignaciones.SetTables();
    }

  final public void Inicio() throws ParseException {
      System.out.println("Inicio");
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEANO:
      case CARACTER:
      case CLASE:
      case HACER:
      case DOBLE:
      case FLOTANTE:
      case PARA:
      case SI:
      case ENTERO:
      case PRIVADO:
      case PROTEGIDO:
      case PUBLICO:
      case IMPRIMIR:
      case ESTATICO:
      case CADENA:
      case MIENTRAS:
      case SWITCH:
      case LLAVE_IZQ:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CARACTER:
      case DOBLE:
      case ENTERO:
      case CADENA:{
        declaracion();
        break;
        }
      case CLASE:
      case PRIVADO:
      case PROTEGIDO:
      case PUBLICO:
      case ESTATICO:{
        Clase();
        break;
        }
      case BOOLEANO:
      case HACER:
      case FLOTANTE:
      case PARA:
      case SI:
      case IMPRIMIR:
      case MIENTRAS:
      case SWITCH:
      case LLAVE_IZQ:
      case IDENTIFICADOR:{
        sentencia();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(0);
  }

  final public void Clase() throws ParseException {
      System.out.println("Clase");
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PRIVADO:
        case PROTEGIDO:
        case PUBLICO:
        case ESTATICO:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        Modificador();
      }
      jj_consume_token(CLASE);
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(LLAVE_IZQ);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BOOLEANO:
        case CARACTER:
        case FLOTANTE:
        case ENTERO:
        case PRIVADO:
        case PROTEGIDO:
        case PUBLICO:
        case ESTATICO:
        case CADENA:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        Metodo();
      }
      jj_consume_token(LLAVE_DER);
    } catch (ParseException e) {
recuperarError(LLAVE_DER);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  void recuperarError(int kind) throws ParseException {ParseException e = generateParseException();

         System.err.println(e.toString());
         ReporteHTML.agregarError(e.toString());
         Token t;
         do {
             t = getNextToken();
         } while (t.kind != kind && t.kind != EOF);
  }

  void recuperarErrorLexico() throws ParseException {Token t;
        t = getNextToken();
  }

  final public void Modificador() throws ParseException {
      System.out.println("Modificador");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLICO:{
        jj_consume_token(PUBLICO);
        break;
        }
      case PRIVADO:{
        jj_consume_token(PRIVADO);
        break;
        }
      case PROTEGIDO:{
        jj_consume_token(PROTEGIDO);
        break;
        }
      case ESTATICO:{
        jj_consume_token(ESTATICO);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void Metodo() throws ParseException {
      System.err.println("Metodo");
    try {
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PRIVADO:
        case PROTEGIDO:
        case PUBLICO:
        case ESTATICO:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_4;
        }
        Modificador();
      }
      tipo_de_dato();
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(PARENT_IZQ);
      Parametros();
      jj_consume_token(PARENT_DER);
      jj_consume_token(LLAVE_IZQ);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BOOLEANO:
        case CARACTER:
        case HACER:
        case DOBLE:
        case FLOTANTE:
        case PARA:
        case SI:
        case ENTERO:
        case PRIVADO:
        case PROTEGIDO:
        case PUBLICO:
        case IMPRIMIR:
        case ESTATICO:
        case CADENA:
        case MIENTRAS:
        case SWITCH:
        case LLAVE_IZQ:
        case IDENTIFICADOR:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        sentencia();
      }
      jj_consume_token(LLAVE_DER);
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void Parametros() throws ParseException {
      System.err.println("Parametros");
    try {
      tipo_de_dato();
      jj_consume_token(IDENTIFICADOR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ARRAY_IZQ:{
        jj_consume_token(ARRAY_IZQ);
        jj_consume_token(ARRAY_DER);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMA:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMA);
        tipo_de_dato();
        jj_consume_token(IDENTIFICADOR);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ARRAY_IZQ:{
          jj_consume_token(ARRAY_IZQ);
          jj_consume_token(ARRAY_DER);
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          ;
        }
      }
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void sentencia() throws ParseException {
      System.err.println("sentencia");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CARACTER:
      case DOBLE:
      case ENTERO:
      case CADENA:{
        declaracion();
        break;
        }
      case IDENTIFICADOR:{
        asignacion();
        break;
        }
      case SI:{
        si();
        break;
        }
      case MIENTRAS:{
        mientras();
        break;
        }
      case PARA:{
        para();
        break;
        }
      case IMPRIMIR:{
        imprimir();
        break;
        }
      case BOOLEANO:
      case FLOTANTE:
      case PRIVADO:
      case PROTEGIDO:
      case PUBLICO:
      case ESTATICO:{
        Metodo();
        break;
        }
      case LLAVE_IZQ:{
        Bloque();
        break;
        }
      case HACER:{
        hacer();
        break;
        }
      case SWITCH:{
        seleccion();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void Bloque() throws ParseException {
      System.err.println("Bloque");
    try {
      jj_consume_token(LLAVE_IZQ);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BOOLEANO:
        case CARACTER:
        case HACER:
        case DOBLE:
        case FLOTANTE:
        case PARA:
        case SI:
        case ENTERO:
        case PRIVADO:
        case PROTEGIDO:
        case PUBLICO:
        case IMPRIMIR:
        case ESTATICO:
        case CADENA:
        case MIENTRAS:
        case SWITCH:
        case LLAVE_IZQ:
        case IDENTIFICADOR:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_7;
        }
        sentencia();
      }
      jj_consume_token(LLAVE_DER);
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void asignacion() throws ParseException {
      System.err.println("asignacion");
    try {
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(ASIGNACION);
      expresion();
      jj_consume_token(PUNTO_COMA);
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void imprimir() throws ParseException {
      System.err.println("imprimir");
    try {
      jj_consume_token(IMPRIMIR);
      jj_consume_token(PARENT_IZQ);
      expresion();
      jj_consume_token(PARENT_DER);
      jj_consume_token(PUNTO_COMA);
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void si() throws ParseException {
      System.err.println("si");
    try {
      jj_consume_token(SI);
      jj_consume_token(PARENT_IZQ);
      expresion();
      jj_consume_token(PARENT_DER);
      cuerpo_si();
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void cuerpo_si() throws ParseException {
      System.err.println("cuerpo_si");
    try {
      jj_consume_token(LLAVE_IZQ);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BOOLEANO:
        case CARACTER:
        case HACER:
        case DOBLE:
        case FLOTANTE:
        case PARA:
        case SI:
        case ENTERO:
        case PRIVADO:
        case PROTEGIDO:
        case PUBLICO:
        case IMPRIMIR:
        case ESTATICO:
        case CADENA:
        case MIENTRAS:
        case SWITCH:
        case LLAVE_IZQ:
        case IDENTIFICADOR:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_8;
        }
        sentencia();
      }
      jj_consume_token(LLAVE_DER);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SI_NO:{
        jj_consume_token(SI_NO);
        jj_consume_token(LLAVE_IZQ);
        label_9:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case BOOLEANO:
          case CARACTER:
          case HACER:
          case DOBLE:
          case FLOTANTE:
          case PARA:
          case SI:
          case ENTERO:
          case PRIVADO:
          case PROTEGIDO:
          case PUBLICO:
          case IMPRIMIR:
          case ESTATICO:
          case CADENA:
          case MIENTRAS:
          case SWITCH:
          case LLAVE_IZQ:
          case IDENTIFICADOR:{
            ;
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            break label_9;
          }
          sentencia();
        }
        jj_consume_token(LLAVE_DER);
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void mientras() throws ParseException {
      System.err.println("mientras");
    try {
      jj_consume_token(MIENTRAS);
      jj_consume_token(PARENT_IZQ);
      expresion();
      jj_consume_token(PARENT_DER);
      cuerpo_mientras();
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void cuerpo_mientras() throws ParseException {
      System.err.println("cuerpo_mientras");
    try {
      jj_consume_token(LLAVE_IZQ);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BOOLEANO:
        case CARACTER:
        case HACER:
        case DOBLE:
        case FLOTANTE:
        case PARA:
        case SI:
        case ENTERO:
        case PRIVADO:
        case PROTEGIDO:
        case PUBLICO:
        case IMPRIMIR:
        case ESTATICO:
        case CADENA:
        case MIENTRAS:
        case SWITCH:
        case LLAVE_IZQ:
        case IDENTIFICADOR:{
          ;
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          break label_10;
        }
        sentencia();
      }
      jj_consume_token(LLAVE_DER);
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void para() throws ParseException {
      System.err.println("para");
    try {
      jj_consume_token(PARA);
      jj_consume_token(PARENT_IZQ);
      asignacion();
      jj_consume_token(PUNTO_COMA);
      expresion();
      jj_consume_token(PUNTO_COMA);
      asignacion();
      jj_consume_token(PARENT_DER);
      cuerpo_para();
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void cuerpo_para() throws ParseException {
      System.err.println("cuerpo_para");
    try {
      jj_consume_token(LLAVE_IZQ);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BOOLEANO:
        case CARACTER:
        case HACER:
        case DOBLE:
        case FLOTANTE:
        case PARA:
        case SI:
        case ENTERO:
        case PRIVADO:
        case PROTEGIDO:
        case PUBLICO:
        case IMPRIMIR:
        case ESTATICO:
        case CADENA:
        case MIENTRAS:
        case SWITCH:
        case LLAVE_IZQ:
        case IDENTIFICADOR:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_11;
        }
        sentencia();
      }
      jj_consume_token(LLAVE_DER);
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void hacer() throws ParseException {
      System.err.println("hacer");
    try {
      jj_consume_token(HACER);
      cuerpo_hacer();
      jj_consume_token(MIENTRAS);
      jj_consume_token(PARENT_IZQ);
      expresion();
      jj_consume_token(PARENT_DER);
      jj_consume_token(PUNTO_COMA);
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void cuerpo_hacer() throws ParseException {
      System.err.println("cuerpo_hacer");
    try {
      jj_consume_token(LLAVE_IZQ);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BOOLEANO:
        case CARACTER:
        case HACER:
        case DOBLE:
        case FLOTANTE:
        case PARA:
        case SI:
        case ENTERO:
        case PRIVADO:
        case PROTEGIDO:
        case PUBLICO:
        case IMPRIMIR:
        case ESTATICO:
        case CADENA:
        case MIENTRAS:
        case SWITCH:
        case LLAVE_IZQ:
        case IDENTIFICADOR:{
          ;
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          break label_12;
        }
        sentencia();
      }
      jj_consume_token(LLAVE_DER);
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void seleccion() throws ParseException {
      System.err.println("seleccion");
    try {
      jj_consume_token(SWITCH);
      jj_consume_token(PARENT_IZQ);
      expresion();
      jj_consume_token(PARENT_DER);
      jj_consume_token(LLAVE_IZQ);
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CASO:{
          ;
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          break label_13;
        }
        jj_consume_token(CASO);
        expresion();
        jj_consume_token(DOS_PUNTOS);
        label_14:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case BOOLEANO:
          case CARACTER:
          case HACER:
          case DOBLE:
          case FLOTANTE:
          case PARA:
          case SI:
          case ENTERO:
          case PRIVADO:
          case PROTEGIDO:
          case PUBLICO:
          case IMPRIMIR:
          case ESTATICO:
          case CADENA:
          case MIENTRAS:
          case SWITCH:
          case LLAVE_IZQ:
          case IDENTIFICADOR:{
            ;
            break;
            }
          default:
            jj_la1[19] = jj_gen;
            break label_14;
          }
          sentencia();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DEFECTO:{
        jj_consume_token(DEFECTO);
        jj_consume_token(DOS_PUNTOS);
        label_15:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case BOOLEANO:
          case CARACTER:
          case HACER:
          case DOBLE:
          case FLOTANTE:
          case PARA:
          case SI:
          case ENTERO:
          case PRIVADO:
          case PROTEGIDO:
          case PUBLICO:
          case IMPRIMIR:
          case ESTATICO:
          case CADENA:
          case MIENTRAS:
          case SWITCH:
          case LLAVE_IZQ:
          case IDENTIFICADOR:{
            ;
            break;
            }
          default:
            jj_la1[20] = jj_gen;
            break label_15;
          }
          sentencia();
        }
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      jj_consume_token(LLAVE_DER);
    } catch (ParseException e) {
recuperarError(PUNTO_COMA);
    } catch (TokenMgrError e) {
recuperarErrorLexico();
    }
  }

  final public void SITUACION() throws ParseException {
      System.err.println("SITUACION");
    jj_consume_token(CASO);
    expresion();
    jj_consume_token(DOS_PUNTOS);
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEANO:
      case CARACTER:
      case HACER:
      case DOBLE:
      case FLOTANTE:
      case PARA:
      case SI:
      case ENTERO:
      case PRIVADO:
      case PROTEGIDO:
      case PUBLICO:
      case IMPRIMIR:
      case ESTATICO:
      case CADENA:
      case MIENTRAS:
      case SWITCH:
      case LLAVE_IZQ:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        break label_16;
      }
      sentencia();
    }
  }
